# loggeragent

./: AUTHORS  ChangeLog  Makefile.in  NEWS  README  config.h.in  configure  configure.in  loggeragent.spec.in  loggerscript.dtd  mkinstalldirs  pkginfo.in  pkglist.in
plugins/: Makefile.in  darwin_plugin.c  fileops.c  ftpops.c  linux_metric.c  linux_packages.c  metricops.c  metricops.h  packageops.c  packageops.h  solaris_devices.c  solaris_metric.c  solaris_packages.c
res/: loggeragent.init.in  loggeragent.xml.in
src/: Makefile.in  configfile.c  configfile.h  job.c  job.h  log.c  log.h  main.c  module.c  module.h  network.c  network.h  plugin.h  script.c  script.h  util.c  util.h
windows/: logger_stats.h  loggeragent.dsp  loggeragent.dsw  loggeragent.ncb  loggeragent.opt  loggeragent.plg  main.cpp  main.h  plugin.h  windows_plugin.cpp
